--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.12.0",
     "lucide-react": "^0.399.0",
     "mongoose": "^8.4.4",
     "next": "14.2.3",
