--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.12.0",
     "lucide-react": "^0.399.0",
     "mongoose": "^8.4.4",
@@ -33,6 +34,7 @@
     "prettier-plugin-organize-imports": "^3.2.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18",
     "recharts": "^2.13.3",
     "sonner": "^1.5.0",
